<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item android:title="@string/navigation_item1">
            <menu>
                <item
                    android:id="@+id/drawer_item1"
                    android:icon="@drawable/ic_change_history_black_24dp"
                    android:title="@string/navigation_subitem1" />
                <item
                    android:id="@+id/drawer_item2"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/navigation_subitem2" />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:title="@string/navigation_item2" >
            <menu>
                <item
                    android:id="@+id/drawer_item3"
                    android:icon="@drawable/ic_receipt_black_24dp"
                    android:title="@string/navigation_subitem3" />
                <item
                    android:id="@+id/drawer_item4"
                    android:title="@string/navigation_subitem4"
                    android:icon="@drawable/ic_opacity_black_24dp"/>
            </menu>
        </item>

    </group>

</menu>